--- a/BMI-example_from_the_Stata_course.html
+++ b/BMI-example_from_the_Stata_course.html
@@ -935,6 +935,35 @@ stargazer(lm1, lm2,lm3,lm4, type=&quot;text&quot;)</code></pre>
 ## Note:                                      *p&lt;0.1; **p&lt;0.05; ***p&lt;0.01</code></pre>
 <p>Does our regression output agree with the graph in question 4? What are the ‘slope’ coefficients of the two regressions? How do they compare to one another?</p>
 <p>The age coefficients of the regressions clearly show that BMI increases with age substantially faster for women than for men between the ages of 20 and 40.</p>
+<div id="information-about-this-seesion" class="section level4">
+<h4>Information about this seesion</h4>
+<pre class="r"><code>sessionInfo()</code></pre>
+<pre><code>## R version 3.3.1 (2016-06-21)
+## Platform: x86_64-w64-mingw32/x64 (64-bit)
+## Running under: Windows 7 x64 (build 7601) Service Pack 1
+## 
+## locale:
+## [1] LC_COLLATE=English_South Africa.1252 
+## [2] LC_CTYPE=English_South Africa.1252   
+## [3] LC_MONETARY=English_South Africa.1252
+## [4] LC_NUMERIC=C                         
+## [5] LC_TIME=English_South Africa.1252    
+## 
+## attached base packages:
+## [1] stats     graphics  grDevices utils     datasets  methods   base     
+## 
+## other attached packages:
+## [1] stargazer_5.2 scales_0.4.1  ggplot2_2.2.1 dplyr_0.5.0  
+## 
+## loaded via a namespace (and not attached):
+##  [1] Rcpp_0.12.9      knitr_1.15.1     magrittr_1.5     munsell_0.4.3   
+##  [5] colorspace_1.3-2 R6_2.2.0         stringr_1.1.0    plyr_1.8.4      
+##  [9] tools_3.3.1      grid_3.3.1       gtable_0.2.0     DBI_0.5-1       
+## [13] htmltools_0.3.5  yaml_2.1.14      lazyeval_0.2.0   assertthat_0.1  
+## [17] rprojroot_1.2    digest_0.6.12    tibble_1.2       reshape2_1.4.2  
+## [21] evaluate_0.10    rmarkdown_1.3    labeling_0.3     stringi_1.1.2   
+## [25] backports_1.0.5</code></pre>
+</div>
 </div>
 
 
