--- a/BMI-example_from_the_Stata_course.html
+++ b/BMI-example_from_the_Stata_course.html
@@ -935,8 +935,8 @@ stargazer(lm1, lm2,lm3,lm4, type=&quot;text&quot;)</code></pre>
 ## Note:                                      *p&lt;0.1; **p&lt;0.05; ***p&lt;0.01</code></pre>
 <p>Does our regression output agree with the graph in question 4? What are the ‘slope’ coefficients of the two regressions? How do they compare to one another?</p>
 <p>The age coefficients of the regressions clearly show that BMI increases with age substantially faster for women than for men between the ages of 20 and 40.</p>
-<div id="information-about-this-seesion" class="section level4">
-<h4>Information about this seesion</h4>
+<div id="information-about-this-session" class="section level4">
+<h4>Information about this session</h4>
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>## R version 3.3.1 (2016-06-21)
 ## Platform: x86_64-w64-mingw32/x64 (64-bit)
